welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:90: error: Unmatched closing brace '}' ignored here
}
^